--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="h-full">
   <app-header></app-header>
-  <router-outlet></router-outlet>
+  <div class="h-full">
+    <router-outlet></router-outlet>
+  </div>
 </div>
