--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="flex bg-dark-gray py-2 px-6 items-center justify-between">
-  <a routerLink="/" class="cursor-pointer text-3xl text-white"
+  <a routerLink="/" class="cursor-pointer text-3xl text-light"
     >HOUSE OF DRYFRUITS</a
   >
 
@@ -8,36 +8,36 @@
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/"
-      class="cursor-pointer font-medium text-lg text-gray-100"
+      class="cursor-pointer font-medium text-xl text-light"
       >Home</a
     >
     <a
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/products"
-      class="cursor-pointer font-medium text-lg text-gray-100"
+      class="cursor-pointer font-medium text-xl text-light"
       >All products</a
     >
     <a
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/categories"
-      class="cursor-pointer font-medium text-lg text-gray-100"
+      class="cursor-pointer font-medium text-xl text-light"
       >Categories</a
     >
     <a
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/account"
-      class="cursor-pointer font-medium text-lg text-gray-100"
+      class="cursor-pointer font-medium text-xl text-light"
       >Account</a
     >
     <a
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/cart"
-      class="cursor-pointer font-medium text-lg text-gray-100"
-      >Cart (0)</a
+      class="cursor-pointer font-medium text-xl text-light"
+      >Cart ({{ cartItemsCount }})</a
     >
   </div>
 </header>
