--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,35 +8,35 @@
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/"
-      class="cursor-pointer font-medium text-xl text-light"
+      class="cursor-pointer font-medium text-base text-light"
       >Home</a
     >
     <a
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/products"
-      class="cursor-pointer font-medium text-xl text-light"
+      class="cursor-pointer font-medium text-base text-light"
       >All products</a
     >
     <a
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/categories"
-      class="cursor-pointer font-medium text-xl text-light"
+      class="cursor-pointer font-medium text-base text-light"
       >Categories</a
     >
     <a
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/account"
-      class="cursor-pointer font-medium text-xl text-light"
+      class="cursor-pointer font-medium text-base text-light"
       >Account</a
     >
     <a
       [routerLinkActiveOptions]="{ exact: true }"
       routerLinkActive="active-link"
       routerLink="/cart"
-      class="cursor-pointer font-medium text-xl text-light"
+      class="cursor-pointer font-medium text-lg text-light"
       >Cart ({{ cartItemsCount }})</a
     >
   </div>
