Added account functionalities

--- a/src/app/check-out/checkout.component.html
+++ b/src/app/check-out/checkout.component.html
@@ -191,14 +191,13 @@
           </div>
 
           <button
-            class="mt-8 border border-transparent hover:border-gray-300 bg-green-700 hover:bg-white text-white hover:text-gray-900 flex justify-center items-center py-4 rounded w-full"
+            class="mt-8 border border-transparent hover:border-gray-300 bg-green-700 hover:bg-green-600 text-white hover:text-gray-900 flex justify-center items-center py-4 rounded w-full"
           >
             <div>
               <p class="text-base leading-4">Complete order</p>
             </div>
           </button>
         </div>
-        <div class="w-1/2">hehehe</div>
         <div class="bg-gray-100"></div>
       </div>
     </div>
