--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,97 +1,105 @@
-<div class="flex bg-gray-100 h-full items-center justify-between">
-  <div class="bg-white mx-auto p-5 rounded-lg grid gap-14">
-    <h1 class="text-4xl font-bold text-center text-dark-blue">
-      {{ mode === "login" ? "Login" : "Signup" }}
-    </h1>
-    <form
-      (submit)="onAuth(authForm)"
-      #authForm="ngForm"
-      class="space-y-6 text-white"
-    >
-      @if(mode == 'signup') {
-      <div class="relative">
-        <div
-          class="absolute top-0.5 left-1 rounded-full p-2 flex items-center justify-center text-blue-300"
-        >
-          <mat-icon
-            class="cursor-pointer"
-            aria-hidden="false"
-            aria-label="Example person icon"
-            fontIcon="person"
-          ></mat-icon>
-        </div>
+<div class="bg-gray-100 py-6 px-6 h-full">
+  <router-outlet></router-outlet>
+
+  <div class="flex gap-5 justify-between">
+    <div class="bg-white p-6 rounded-lg w-2/4">
+      <h2 class="text-2xl font-bold text-dark-blue">Whishlist</h2>
+    </div>
+
+    <div class="flex flex-col gap-5 bg-white p-6 rounded-lg w-2/6">
+      <h2 class="text-2xl font-bold text-dark-blue">Account Details</h2>
+
+      <form #accountDetailsForm="ngForm" class="flex flex-col gap-3">
         <input
           ngModel
           required
-          #userName="ngModel"
-          name="userName"
-          type="text"
-          placeholder="User Name"
-          class="w-80 bg-gray-100 py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
-        />
-      </div>
-      }
-      <div class="relative">
-        <div
-          class="absolute top-0.5 left-1 rounded-full p-2 flex items-center justify-center text-blue-300"
-        >
-          <mat-icon
-            class="cursor-pointer"
-            aria-hidden="false"
-            aria-label="Example mail icon"
-            fontIcon="mail"
-          ></mat-icon>
-        </div>
-        <input
-          ngModel
-          email
-          required
+          email=""
           #emailAddress="ngModel"
           name="emailAddress"
           type="email"
           placeholder="Email Address"
-          class="w-80 bg-gray-100 py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+          class="bg-gray-100 py-2 text-dark-blue px-4 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
         />
-      </div>
-      <div class="relative">
-        <div
-          class="absolute top-0.5 left-1 rounded-full p-2 flex items-center justify-center text-blue-300"
-        >
-          <mat-icon
-            class="cursor-pointer"
-            aria-hidden="false"
-            aria-label="Example lock icon"
-            fontIcon="lock"
-          ></mat-icon>
+        <input
+          ngModel
+          required
+          #phoneNumber="ngModel"
+          name="phoneNumber"
+          type="tel"
+          placeholder="Phone Number"
+          class="bg-gray-100 py-2 text-dark-blue px-4 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+        />
+
+        <div class="flex justify-between">
+          <input
+            ngModel
+            required
+            #city="ngModel"
+            name="city"
+            type="text"
+            placeholder="City"
+            class="bg-gray-100 w-2/5 py-2 text-dark-blue px-4 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+          />
+          <input
+            ngModel
+            required
+            #postalCode="ngModel"
+            name="postalCode"
+            type="text"
+            placeholder="Postal Code"
+            class="bg-gray-100 w-2/5 py-2 text-dark-blue px-4 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+          />
         </div>
         <input
-          required
           ngModel
-          #password="ngModel"
-          name="password"
-          type="password"
-          placeholder="Password"
-          class="w-80 bg-gray-100 py-2 px-12 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+          required
+          #address1="ngModel"
+          name="address1"
+          type="text"
+          placeholder="Address"
+          class="bg-gray-100 py-2 text-dark-blue px-4 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
         />
-      </div>
-      <button
-        type="submit"
-        class="bg-gradient-to-r from-blue-400 to-cyan-200 w-80 font-semibold rounded-full py-2"
-      >
-        {{ mode == "login" ? "Login" : "Signup" }}
-      </button>
-    </form>
-    <div class="border-t border-white-light pt-4 space-y-4 text-sm">
-      <p (click)="onSignup()" class="text-dark-blue">
-        {{
-          mode == "login"
-            ? "Don't have an account?"
-            : "Already have an account?"
-        }}
-        <a class="text-dark-gray font-semibold cursor-pointer">{{
-          mode == "login" ? "Signup" : "Login"
-        }}</a>
-      </p>
+        <input
+          ngModel
+          #address2="ngModel"
+          name="address2"
+          type="text"
+          placeholder="Address, suite, etc. (optional)"
+          class="bg-gray-100 py-2 text-dark-blue px-4 rounded-full focus:bg-black-dark focus:outline-none focus:ring-1 focus:ring-neon-blue focus:drop-shadow-lg"
+        />
+        <div class="flex gap-2">
+          <button
+            (click)="onUpdate(accountDetailsForm)"
+            [disabled]="accountDetailsForm.invalid"
+            [ngClass]="
+              accountDetailsForm.invalid ? 'invalid-update' : 'valid-update'
+            "
+            type="submit"
+            class="mx-2 my-2 bg-gray-600 transition duration-150 ease-in-out hover:bg-gray-500 rounded-lg text-white px-4 py-1 text-base"
+          >
+            Update
+          </button>
+          <button
+            (click)="onSave(accountDetailsForm)"
+            [disabled]="accountDetailsForm.invalid"
+            [ngClass]="
+              accountDetailsForm.invalid ? 'invalid-save' : 'valid-save'
+            "
+            type="submit"
+            class="mx-2 my-2 bg-green-700 transition duration-150 ease-in-out hover:bg-green-600 rounded-lg text-white px-4 py-1 text-base"
+          >
+            save
+          </button>
+        </div>
+        <hr class="border border-gray-500" />
+        <button
+          type="button"
+          (click)="onLogout()"
+          class="mx-2 my-2 bg-red-600 transition duration-150 ease-in-out hover:bg-red-500 rounded-lg text-white px-6 py-2 text-base"
+        >
+          Logout
+        </button>
+      </form>
     </div>
   </div>
 </div>
