--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -4,7 +4,7 @@
     <div class="flex gap-8">
       @for(product of products; track product.id) {
       <div
-        class="w-56 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
+        class="w-56 relative bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl"
       >
         <div>
           <img
@@ -14,6 +14,49 @@
             alt="Product"
             class="h-52 w-72 object-cover rounded-t-xl"
           />
+          <div
+            class="cursor-pointer icons-container hidden"
+            id="iconsContainer"
+          >
+            <div
+              class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+            >
+              <mat-icon
+                (click)="onRemoveFromWhishlist(product.id)"
+                aria-hidden="false"
+                aria-label="Example close icon"
+                fontIcon="close"
+              ></mat-icon>
+              <!-- <mat-icon
+                (click)="onAddToWhishlist(product.id)"
+                aria-hidden="false"
+                aria-label="Example favorite icon"
+                fontIcon="favorite"
+              ></mat-icon> -->
+            </div>
+            <div
+              class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+            >
+              <mat-icon
+                class=""
+                (click)="onAddToCart(product.id)"
+                aria-hidden="false"
+                aria-label="Example local_mall icon"
+                fontIcon="local_mall"
+              ></mat-icon>
+            </div>
+            <div
+              class="cursor-pointer bg-gray-100 px-3 pt-3 pb-1 rounded-md hover:px-4 hover:pt-4 hover:pb-2"
+            >
+              <mat-icon
+                class=""
+                (click)="onViewProduct(product.id)"
+                aria-hidden="false"
+                aria-label="Example visibility"
+                fontIcon="visibility"
+              ></mat-icon>
+            </div>
+          </div>
           <div class="px-3 py-1">
             <p
               routerLink="/cart"
